# yaaos

./: .gitignore  PROGRESS.md  README.md  todo.md
.github/workflows/: ci.yml
.planning/: 01_first_draft_ai_linux_distro.md  INDEX.md
.planning/docs/: architecture.md  dev_commands.md  mvp_scope.md  phase2_model_bus_plan.md  phase3_systemagentd_plan.md  roadmap.md  sfs_v2_plan.md  tech_stack.md
.planning/drafts/: 02_target_audiences_and_use_cases.md  03_architecture_overview.md  04_tech_stack_decisions.md  05_mvp_scope.md  06_roadmap.md
.planning/phases/03-systemagentd/: 03-RESEARCH-daemon.md  03-RESEARCH.md
scripts/: dev-setup.sh
src/yaaos-agentd/: agentd.toml.example  pyproject.toml
src/yaaos-agentd/src/yaaos_agentd/: __init__.py  agent_base.py  agent_runner.py  cli.py  client.py  config.py  errors.py  server.py  state.py  supervisor.py  systemd.py  types.py
src/yaaos-agentd/src/yaaos_agentd/agents/: __init__.py  crash_agent.py  fs_agent.py  log_agent.py  net_agent.py  resource_agent.py
src/yaaos-agentd/src/yaaos_agentd/tools/: __init__.py  manifest.py  registry.py  sandbox.py
src/yaaos-agentd/src/yaaos_agentd/tools/manifests/: adb.toml  docker.toml  git.toml
src/yaaos-agentd/systemd/: systemagentd-agent-crash.socket  systemagentd-agent@.service  systemagentd.service  yaaos-agents.slice
src/yaaos-agentd/tests/: conftest.py  test_agent_base.py  test_cli.py  test_client.py  test_config.py  test_errors.py  test_integration.py  test_server.py  test_supervisor.py  test_types.py
src/yaaos-agentd/tests/agents/: test_crash_agent.py  test_fs_agent.py  test_log_agent.py  test_net_agent.py  test_resource_agent.py
src/yaaos-agentd/tests/tools/: test_manifest.py  test_registry.py  test_sandbox.py
src/yaaos-agentd/tools.d/: coredumpctl.toml  gradle.toml  journalctl.toml  pacman.toml  sdkmanager.toml  systemctl.toml
src/yaaos-modelbus/: .env.example  pyproject.toml
src/yaaos-modelbus/src/yaaos_modelbus/: __init__.py  cli.py  client.py  config.py  daemon.py  errors.py  resources.py  router.py  server.py  streaming.py  types.py
src/yaaos-modelbus/src/yaaos_modelbus/providers/: __init__.py  anthropic.py  local.py  ollama.py  openai.py  voyage.py
src/yaaos-modelbus/systemd/: yaaos-modelbus.service
src/yaaos-modelbus/tests/: conftest.py  e2e_smoke.py  test_cli.py  test_client.py  test_config.py  test_errors.py  test_integration.py  test_resources.py  test_router.py  test_server.py  test_streaming.py  test_types.py
src/yaaos-modelbus/tests/providers/: test_anthropic.py  test_ollama.py  test_openai.py  test_voyage.py
src/yaaos-sfs/: .gitignore  .sfsignore.default  ARCHITECTURE.md  README.md  pyproject.toml  stress_out.txt
src/yaaos-sfs/src/yaaos_sfs/: __init__.py  cli.py  client.py  config.py  daemon.py  db.py  filter.py  indexer.py  search.py  server.py
src/yaaos-sfs/src/yaaos_sfs/chunkers/: __init__.py  code.py  document.py  structured.py
src/yaaos-sfs/src/yaaos_sfs/extractors/: __init__.py  documents.py  media.py  text.py
src/yaaos-sfs/src/yaaos_sfs/providers/: __init__.py  local.py  modelbus_provider.py  ollama_provider.py  openai_provider.py  voyage_provider.py
src/yaaos-sfs/systemd/: yaaos-sfs.service
src/yaaos-sfs/tests/: conftest.py  test_chunkers.py  test_cli.py  test_config.py  test_daemon.py  test_db.py  test_extractors.py  test_filter.py  test_indexer.py  test_integration.py  test_modelbus_provider.py  test_providers.py  test_providers_new.py  test_search.py  test_search_v2.py
src/yaaos-sfs/tests/stress/: README.md  generate_corpus.py  stress_test.py
src/yaaos-sfs/tools/stats/: calc_stats.py  calc_stats_win.py
