[project]
name = "yaaos-agentd"
version = "0.1.0"
description = "YAAOS SystemAgentd — AI agent orchestration daemon with OTP-style supervision"
requires-python = ">=3.12"
dependencies = [
    "yaaos-modelbus",
    "httpx>=0.27",
    "orjson>=3.10",
    "structlog>=24.0",
    "click>=8.0",
    "rich>=13.0",
    "psutil>=5.9",
    "jinja2>=3.1",
    "jsonschema>=4.0",
    "dbus-next>=0.2",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
nvidia = ["pynvml>=12.0"]
systemd = ["sdnotify>=0.3"]
# journal extra requires libsystemd-dev C headers at build time:
# Install manually on target: pip install systemd-python (after apt install libsystemd-dev)
# journal = ["systemd-python>=235; sys_platform == 'linux'"]
all = ["yaaos-agentd[nvidia,systemd]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "pytest-timeout>=2.0",
]

[project.scripts]
systemagentd = "yaaos_agentd.supervisor:main"
yaaos-agent = "yaaos_agentd.agent_runner:main"
systemagentctl = "yaaos_agentd.cli:main"

[project.entry-points."yaaos.agentd.agents"]
log = "yaaos_agentd.agents.log_agent:LogAgent"
crash = "yaaos_agentd.agents.crash_agent:CrashAgent"
resource = "yaaos_agentd.agents.resource_agent:ResourceAgent"
net = "yaaos_agentd.agents.net_agent:NetAgent"
fs = "yaaos_agentd.agents.fs_agent:FsAgent"

[tool.uv.sources]
yaaos-modelbus = { path = "../yaaos-modelbus", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yaaos_agentd"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: full-stack integration tests requiring external services"]
