[project]
name = "yaaos-sfs"
version = "0.1.0"
description = "YAAOS Semantic File System — search files by meaning, not name"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=3.0",
    "sqlite-vec>=0.1",
    "watchdog>=4.0",
    "click>=8.0",
    "rich>=13.0",
    "tomli>=2.0",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]

[project.scripts]
yaaos-find = "yaaos_sfs.cli:main"
yaaos-sfs = "yaaos_sfs.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
